<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/all"
            android:icon="@drawable/ic_group_work_black_24dp"
            android:title="@string/all"/>
        <item
            android:id="@+id/public_office"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/public_office"/>
        <item
            android:id="@+id/school_and_nursery"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/school_and_nursery"/>
        <item
            android:id="@+id/park_and_sports"
            android:icon="@drawable/ic_local_florist_black_24dp"
            android:title="@string/park_and_sports"/>
        <item
            android:id="@+id/hall"
            android:icon="@drawable/ic_event_seat_black_24dp"
            android:title="@string/hall"/>
        <item
            android:id="@+id/culture_and_tourist"
            android:icon="@drawable/ic_camera_alt_black_24dp"
            android:title="@string/culture_and_tourist"/>
        <item
            android:id="@+id/police_and_fire"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/police_and_fire"/>
        <item
            android:id="@+id/medical_care_and_welfare"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/medical_care_and_welfare"/>
        <item
            android:id="@+id/attractions_and_historic_sites"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/attractions_and_historic_sites"/>
        <item
            android:id="@+id/stations_and_bus_stop"
            android:icon="@drawable/ic_train_black_24dp"
            android:title="@string/stations_and_bus_stop"/>
        <item
            android:id="@+id/parking_and_bycycle_parking"
            android:icon="@drawable/ic_local_parking_black_24dp"
            android:title="@string/parking_and_bycycle_parking"/>
        <item
            android:id="@+id/public_toilet"
            android:icon="@drawable/ic_wc_black_24dp"
            android:title="@string/public_toilet"/>
        <item
            android:id="@+id/environment_and_rcycling"
            android:icon="@drawable/ic_nature_black_24dp"
            android:title="@string/environment_and_rcycling"/>
        <item
            android:id="@+id/other"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/other"/>
        <item
            android:id="@+id/housing_shelter"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/housing_shelter"/>
        <item
            android:id="@+id/disaster_for_heliport"
            android:icon="@drawable/ic_h_24dp"
            android:title="@string/disaster_for_heliport"/>
        <item
            android:id="@+id/fire_protection_water_tank"
            android:icon="@drawable/ic_blur_circular_black_24dp"
            android:title="@string/fire_protection_water_tank"/>
        <item
            android:id="@+id/fire_disaster_prevention_speaker"
            android:icon="@drawable/ic_volume_up_black_24dp"
            android:title="@string/fire_disaster_prevention_speaker"/>
        <item
            android:id="@+id/tsunami_evacuation_building"
            android:icon="@drawable/ic_business_black_24dp"
            android:title="@string/tsunami_evacuation_building"/>
    </group>
</menu>
