<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- 住所 -->
        <LinearLayout
            android:id="@+id/layout_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space72"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="@dimen/padding16"
                android:src="@drawable/ic_place_grey600_24dp"
                app:tint="@color/accent"
                android:contentDescription="@string/no_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/padding16"
                android:layout_marginLeft="@dimen/padding4"
                android:layout_marginRight="@dimen/padding16"
                android:layout_marginStart="@dimen/padding4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/location_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="map"
                    android:choiceMode="singleChoice"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/address"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </LinearLayout>
        </LinearLayout>

        <!-- URL -->
        <LinearLayout
            android:id="@+id/layout_url"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space72"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/url_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="@dimen/padding16"
                android:src="@drawable/ic_web_grey600_24dp"
                app:tint="@color/accent"
                android:contentDescription="@string/no_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/padding16"
                android:layout_marginLeft="@dimen/padding4"
                android:layout_marginRight="@dimen/padding16"
                android:layout_marginStart="@dimen/padding4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/url_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:choiceMode="singleChoice"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/hp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </LinearLayout>
        </LinearLayout>

        <!-- 電話 -->
        <LinearLayout
            android:id="@+id/layout_call"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space72"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/call_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="@dimen/padding16"
                android:src="@drawable/ic_call_grey600_24dp"
                app:tint="@color/accent"
                android:contentDescription="@string/no_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/padding16"
                android:layout_marginLeft="@dimen/padding4"
                android:layout_marginRight="@dimen/padding16"
                android:layout_marginStart="@dimen/padding4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/call_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:choiceMode="singleChoice"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/call"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </LinearLayout>
        </LinearLayout>

        <!-- 駐車場 -->
        <LinearLayout
            android:id="@+id/layout_parking"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space72"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/parking_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="@dimen/padding16"
                app:srcCompat="@drawable/ic_local_parking_black_24dp"
                app:tint="@color/accent"
                android:contentDescription="@string/no_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/padding16"
                android:layout_marginLeft="@dimen/padding4"
                android:layout_marginRight="@dimen/padding16"
                android:layout_marginStart="@dimen/padding4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/parking_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:choiceMode="singleChoice"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/parking"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </LinearLayout>
        </LinearLayout>


        <!-- バリアフリー -->
        <LinearLayout
            android:id="@+id/layout_free"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space72"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/free_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="@dimen/padding16"
                app:srcCompat="@drawable/ic_local_wheelchair_black_24dp"
                app:tint="@color/accent"
                android:contentDescription="@string/no_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/padding16"
                android:layout_marginLeft="@dimen/padding4"
                android:layout_marginRight="@dimen/padding16"
                android:layout_marginStart="@dimen/padding4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/free_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:choiceMode="singleChoice"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/barrier"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>
        </LinearLayout>

        <!--<Space-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="16dp"/>-->

        <!-- 詳細 -->
        <LinearLayout
            android:id="@+id/layout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detail_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="@dimen/padding16"
                app:srcCompat="@drawable/ic_local_wheelchair_black_24dp"
                app:tint="@color/accent"
                android:contentDescription="@string/no_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/padding16"
                android:layout_marginLeft="@dimen/padding4"
                android:layout_marginRight="@dimen/padding16"
                android:layout_marginStart="@dimen/padding4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:choiceMode="singleChoice"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:scrollHorizontally="true"
                    android:text="@string/details"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>