<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding8">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:descendantFocusability="blocksDescendants"
        android:paddingBottom="@dimen/padding16"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- グループ -->
            <LinearLayout
                android:id="@+id/layout_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/space72"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/padding16"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:choiceMode="singleChoice"
                            android:gravity="center_vertical"
                            android:text="@string/name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:choiceMode="singleChoice"
                            android:gravity="center_vertical"
                            android:text="@string/group"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/subtitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:text="@string/no_description"
                            android:visibility="visible"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:tint="@color/grey_500"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- 距離 -->

            <!-- 住所 -->

            <!-- URL -->

            <!-- 電話 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal" android:weightSum="1">

                <!-- URL -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/url_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:minHeight="48dip"
                    android:padding="@dimen/padding16"
                    android:src="@drawable/ic_web_grey600_24dp"
                    android:tint="?colorAccent"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/call_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:minHeight="48dip"
                    android:padding="@dimen/padding16"
                    android:src="@drawable/ic_call_grey600_24dp"
                    android:tint="?colorAccent"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/info_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:minHeight="48dip"
                    android:padding="@dimen/padding16"
                    card_view:srcCompat="@drawable/ic_info_black_24dp"
                    android:tint="?colorAccent"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>